# produtos-ploomes-bling

./: .env.example  .gitignore  Dockerfile  Dockerfile.pipeline  README.md  RETOMAR_CARGA.md  _diag_contact.json  cloudbuild.pipeline.buildonly.yaml  cloudbuild.pipeline.yaml  cloudbuild.yaml  disparar_deal_teste.ps1  pipeline.py  requirements-local.txt  requirements-pipeline.txt  requirements.txt  testar_funil_teste.ps1  verificar_deal.py
manutencao/: .dockerignore  .env.example  CLAUDE.md  Dockerfile  README.md  alembic.ini  cloudbuild.yaml  entrypoint.sh  pyproject.toml  requirements.txt
manutencao/alembic/: env.py
manutencao/alembic/versions/: 0001_extensoes_e_step1.py
manutencao/app/: main.py
manutencao/app/api/v1/: deps.py
manutencao/app/core/: config.py  security.py
manutencao/app/db/: base.py  session.py
manutencao/app/models/: __init__.py  empresa.py  perfil.py  permissao.py  usuario.py
manutencao/app/repositories/: empresa.py  perfil.py  usuario.py
manutencao/app/schemas/: auth.py  common.py  empresa.py  perfil.py  usuario.py
manutencao/app/services/: auth_service.py  empresa_service.py  errors.py  perfil_service.py  usuario_service.py
manutencao/deploy/: README.md
manutencao/deploy/terraform/: apis.tf  artifact_registry.tf  cloud_run.tf  cloud_sql.tf  outputs.tf  secrets.tf  service_account.tf  terraform.tfvars.example  variables.tf
manutencao/docs/: README.md
manutencao/scripts/: seed.py
manutencao/tests/: conftest.py  test_auth.py  test_config.py  test_empresas.py  test_health.py  test_perfis.py  test_security.py  test_usuarios.py
(+73 files in other folders)
