[project]
name = "manutencao-backend"
version = "0.1.0"
description = "Backend do Aplicativo de Manutenção Industrial (FastAPI + SQLAlchemy async)"
requires-python = ">=3.12"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]
